--- a/css/stylesheet_about.css
+++ b/css/stylesheet_about.css
@@ -71,3 +71,69 @@ h1 {
   -moz-box-shadow: 0px 6px 14px -5px rgba(0, 0, 0, 0.49);
   background-color: rgba(255, 255, 255, 0.281);
 }
+
+.contact-info {
+  color: white;
+  position: relative;
+  margin: auto;
+  max-width: 50%;
+}
+.mapouter {
+  margin: auto;
+  max-width: 50%;
+  margin-bottom: 100px;
+}
+
+.contact-form {
+  background: #fff;
+  margin-top: 40px;
+  margin-bottom: 10px;
+  width: 70%;
+}
+.contact-form .form-control {
+  border-radius: 1rem;
+}
+.contact-image {
+  text-align: center;
+}
+.contact-image img {
+  border-radius: 6rem;
+  width: 11%;
+  margin-top: -3%;
+  transform: rotate(29deg);
+}
+.contact-form form {
+  padding: 14%;
+}
+.contact-form form .row {
+  margin-bottom: -7%;
+}
+.contact-form h3 {
+  margin-bottom: 8%;
+  margin-top: -10%;
+  text-align: center;
+  color: #0062cc;
+}
+.contact-form .btnContact {
+  width: 50%;
+  border: none;
+  border-radius: 1rem;
+  padding: 1.5%;
+  background: #dc3545;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+}
+.btnContactSubmit {
+  width: 50%;
+  border-radius: 1rem;
+  padding: 1.5%;
+  color: #fff;
+  background-color: #0062cc;
+  border: none;
+  cursor: pointer;
+}
+
+.form-group {
+  padding: 10px;
+}
