--- a/css/stylesheet_purchase.css
+++ b/css/stylesheet_purchase.css
@@ -1,152 +1,241 @@
-.topnav {
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
+* {
+  box-sizing: border-box;
+}
 
-  body {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: center;
-  
-    background: linear-gradient(#e6e6e6, #bbbbbb);
-  
-    font-family: "Raleway", sans-serif;
-  }
-  
-  #main {
-    position: relative;
-    width: 550px;
-    height: 330px;
-  
-    left: 30px;
-  
-    border-radius: 10px;
-    box-shadow: shadow;
-  
-    background-color: white;
-  }
-  
-  #left {
-    position: relative;
-    background: gradient,
-      url("https://images.pexels.com/photos/556663/pexels-photo-556663.jpeg?auto=compress&cs=tinysrgb&h=650&w=940");
-    background-size: cover;
-    background-position: center;
-  
-    height: calc(100% + 50px);
-    width: 40%;
-    top: -35px;
-    left: -50px;
-    padding: 10px 25px;
-  
-    box-shadow: shadow;
-  
-    color: white;
-  
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
-  }
-  
-  #left #head {
-    opacity: 0.95;
-  }
-  
-  #right {
-    position: absolute;
-    width: calc(60% - 40px);
-    height: 100%;
-    top: 0;
-    left: 40%;
-  
-    display: flex;
-    flex-flow: column nowrap;
-  
-    padding-left: 20px;
-  }
-  
-  #right form {
-    display: flex;
-    flex-flow: column nowrap;
-  
-    width: 100%;
-  }
-  
-  #right form input,
-  #right form select {
-    -moz-appearance:none; /* Firefox */
-    -webkit-appearance:none; /* Safari and Chrome */
-    appearance:none;
-    border: none;
-    border-bottom: 1.5px solid #ccc;
-    
-    padding: 5px;
-    margin-top: 2.5px;
-    position: relative;
-  }
-  
-  #right form .form-field {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    
-    margin-bottom: 12.5px;
-  }
-  
-  #right form #date-val {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  #right form #date-val select {
-    width: 45%;
-  }
-  
-  #right form button[type="submit"] {
-    background: linear-gradient(
-                  135deg,
-                  primary 0%,
-                  secondary 100%
-                );
-    padding: 5px;
-    border: none;
-    border-radius: 50px;
-    color: white;
-    font-weight: 400;
-    font-size: 12pt;
-    margin-top: 10px;
-  }
-  
-  #right form button[type="submit"]:hover {
-    background: transparent;
-    box-shadow: 0 0 0 3px primary;
-    color: primary;
-  }
-  
+html,
+body {
+  font-family: "Montserrat", sans-serif;
+  display: flex;
+  margin: 0 auto;
+  background: #f4f4f4;
+  justify-content: center;
+  align-items: center;
+}
+.checkout-panel {
+  margin: 100px;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  height: 740px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2);
+}
+.panel-body {
+  padding: 45px 80px 0;
+  flex: 1;
+}
+
+.title {
+  font-weight: 700;
+  margin-top: 0;
+  margin-bottom: 40px;
+  color: #2e2e2e;
+}
+.progress-bar {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: space-between;
+}
+.step {
+  box-sizing: border-box;
+  position: relative;
+  z-index: 1;
+  display: block;
+  width: 25px;
+  height: 25px;
+  margin-bottom: 30px;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  background-color: #efefef;
+}
+.step:after {
+  position: absolute;
+  z-index: -1;
+  top: 5px;
+  left: 22px;
+  width: 225px;
+  height: 6px;
+  content: "";
+  background-color: #efefef;
+}
+.step:before {
+  color: #2e2e2e;
+  position: absolute;
+  top: 40px;
+}
+.step:last-child:after {
+  content: none;
+}
+
+.step.active {
+  background-color: #f62f5e;
+}
+.step.active:after {
+  background-color: #f62f5e;
+}
+.step.active:before {
+  color: #f62f5e;
+}
+.step.active + .step {
+  background-color: #f62f5e;
+}
+.step.active + .step:before {
+  color: #f62f5e;
+}
+
+.step:nth-child(1):before {
+  content: "Delivery";
+}
+.step:nth-child(2):before {
+  right: -40px;
+  content: "Confirmation";
+}
+.step:nth-child(3):before {
+  right: -30px;
+  content: "Payment";
+}
+.step:nth-child(4):before {
+  right: 0;
+  content: "Finish";
+}
+.payment-method {
+  display: flex;
+  margin-bottom: 60px;
+  justify-content: space-between;
+}
+
+.method {
+  display: flex;
+  flex-direction: column;
+  width: 382px;
+  height: 122px;
+  padding-top: 20px;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 2px;
+  background-color: rgb(249, 249, 249);
+  justify-content: center;
+  align-items: center;
+}
+
+.card-logos {
+  display: flex;
+  width: 150px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.radio-input {
+  margin-top: 20px;
+}
+
+input[type="radio"] {
+  display: inline-block;
+}
+.input-fields {
+  display: flex;
+  justify-content: space-between;
+}
+
+.input-fields label {
+  display: block;
+  margin-bottom: 10px;
+  color: #b4b4b4;
+}
+
+.info {
+  font-size: 12px;
+  font-weight: 300;
+  display: block;
+  margin-top: 50px;
+  opacity: 0.5;
+  color: #2e2e2e;
+}
+
+div[class*="column"] {
+  width: 382px;
+}
+
+input[type="text"],
+input[type="password"] {
+  font-size: 16px;
+  width: 100%;
+  height: 50px;
+  padding-right: 40px;
+  padding-left: 16px;
+  color: rgba(46, 46, 46, 0.8);
+  border: 1px solid rgb(225, 225, 225);
+  border-radius: 4px;
+  outline: none;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus {
+  border-color: rgb(119, 219, 119);
+}
+
+#date {
+  background: url(img/icons_calendar_black.png) no-repeat 95%;
+}
+#cardholder {
+  background: url(img/icons_person_black.png) no-repeat 95%;
+}
+#cardnumber {
+  background: url(img/icons_card_black.png) no-repeat 95%;
+}
+#verification {
+  background: url(img/icons_lock_black.png) no-repeat 95%;
+}
+
+.small-inputs {
+  display: flex;
+  margin-top: 20px;
+  justify-content: space-between;
+}
+
+.small-inputs div {
+  width: 182px;
+}
+.panel-footer {
+  display: flex;
+  width: 100%;
+  height: 96px;
+  padding: 0 80px;
+  background-color: rgb(239, 239, 239);
+  justify-content: space-between;
+  align-items: center;
+}
+.btn {
+  font-size: 16px;
+  width: 163px;
+  height: 48px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  letter-spacing: 1px;
+  border: none;
+  border-radius: 23px;
+}
+
+.back-btn {
+  color: #f62f5e;
+  background: #fff;
+}
+
+.next-btn {
+  color: #fff;
+  background: #f62f5e;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:hover {
+  transform: scale(1.1);
+}
+.blue-border {
+  border: 1px solid rgb(110, 178, 251);
+}
+.warning {
+  border-color: #f62f5e;
+}
